--- a/Oppgave_02/index.html
+++ b/Oppgave_02/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Parcel Sandbox</title>
   <meta charset="UTF-8" />
+  <!--<link type="module" src="src/mye_hjelp.js">-->
 </head>
 
 <body>
