--- a/Oppgave_02/index.html
+++ b/Oppgave_02/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Parcel Sandbox</title>
   <meta charset="UTF-8" />
-  <!--<link type="module" src="src/mye_hjelp.js">-->
+  <link rel="stylesheet" href="src/styles.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <ul id="users"></ul>
   </main>
 
-  <script src="src/mye_hjelp.js"></script>
+  <script type="module" src="src/ingen_hjelp.js"></script>
 </body>
-
+  
 </html>
